# psr-demo

./: CHANGELOG.md  README.md  pyproject.toml  semantic-release.toml
.github/: release.yml
.github/workflows/: build.yml  continuous_delivery.yml  e2e-test.yml  publish.yml  release.yml
scripts/: verify-upstream-has-not-changed.sh
src/psm_demo/: __init__.py
