[project]
name = "psm-demo"
version = "0.0.0"
description = "Demo project for python-semantic-release"
readme = "README.md"
authors = [
    { name = "fleetingbytes", email = "7075397+fleetingbytes@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
psm-demo = "psm_demo:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "ruff>=0.12.10",
]
psr = [
    "python-semantic-release>=10.3.1",
]
